# evil_dungeon

./: Cargo.toml  README.md  release.bat  run.bat
.github/workflows/: codeql.yml
assets/: atlas.json
raw assets/dungeon/: atlas.json  atlas.tpsheet  texture atlas.tps
src/: main.rs
src/components/: camera_tag.rs  mod.rs
src/core/: constants.rs  constants_general.rs  game_info.rs  mod.rs  resource_animation_info.rs  resource_game_settings.rs  resource_general_game_state.rs  scene_playing.rs  scene_state.rs  screen_menu.rs  screen_playing.rs  screen_state.rs
src/core/actors/: actor_kind.rs  knight_bundle.rs  mod.rs  wizard_bundle.rs
src/core/actors/camera/: mod.rs  tiw_camera_bundle.rs
src/core/actors/enemies/: big_zombie_bundle.rs  mod.rs
src/core/actors/player/: knight_bundle.rs  mod.rs
src/core/actors/tiles/: component_tile_type.rs  floor_bundle.rs  mod.rs  tile_type.rs  wall_bundle.rs
src/core/core_components/: comonent_camera_tag.rs  component_actor_kind.rs  component_animation_clip.rs  component_animation_clip_kind.rs  component_animator.rs  component_camera_tag.rs  component_can_animate.rs  component_can_collide.rs  component_can_deal_damage.rs  component_can_move.rs  component_collision.rs  component_deal_damage.rs  component_handle_input.rs  component_has_health.rs  component_health.rs  component_movement.rs  component_player_tag.rs  mod.rs
src/core/core_components/ai/: ai_common.rs  ai_states.rs  component_ai.rs  component_ai_actions.rs  component_ai_brain.rs  component_ai_brain_2.rs  mod.rs  pathfinder.rs
src/core/core_components/ai_components/: component_ai_attack_spawn_enemies.rs  component_ai_chase.rs  component_ai_flee.rs  component_ai_idle.rs  component_ai_wandering.rs  mod.rs  tiw_ai_trait.rs
src/core/debugging/: debug_console.rs  debug_helpers.rs  debug_systems.rs  mod.rs  res_debug_settings.rs  resource_debug_settings.rs  retro_world_inspector.rs  systems.rs
src/core/events/: event_actor_is_killed.rs  event_collision_detected.rs  event_player_is_hit.rs  mod.rs
src/retro_asset_management/: mod.rs  texture_packer_info.rs
src/tiw_animation/: animation_clip_kind.rs  component_animation.rs  mod.rs  resource_animation_info.rs  tiw_animation_clip.rs
src/tiw_asset_management/: constants_file_names.rs  mod.rs  resource_atlas_info.rs  texture_packer_atlas_info.rs  texture_packer_json_dto.rs  texture_packer_loader.rs
src/tiw_camera/: mod.rs  tiw_camera_bundle.rs
src/tiw_physics/: mod.rs
src/tiw_tilemap/: map_generation_input.rs  mod.rs  room.rs  tiw_tile_map.rs
src/tiw_tilemap/tiles/: floor_bundle.rs  mod.rs
