[package]
name = "evil_dungeon"
version = "0.1.0"
description = "An 2d dungeon crawler to learn Bevy and Rust programming and share the journey with others."
edition = "2021"
keywords = ["bevy", "game", "roguelike", "dungeon crawler", "rust", "tutorial"]
authors = ["Shrine of Tiw Games"]
license = "MIT"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

# Use the latest versions for beavy and releated crates until all features needed in stable release
[dependencies]
rstest = "0.21.*"
bevy_light_2d = "0.1.*"
bevy = "0.13.*"
bevy-trait-query = "0.5.*"
bevy-inspector-egui = "0.24.*"
iyes_perf_ui = "0.2.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
