[package]
name = "evil_dungeon"
version = "0.1.0"
description = "An 2d dungeon crawler to learn Bevy and Rust programming and share the journey with others."
edition = "2021"
keywords = [
    "bevy engine",
    "game",
    "roguelike",
    "dungeon crawler",
    "rust",
    "tutorial",
]
authors = ["Shrine of Tiw Games"]
license = "MIT"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

# Use the latest versions for beavy and releated crates until all features needed in stable release
[dependencies]
bevy = "0.13.*"
rand = "0.8.*"
bevy_egui = "0.27.*"
bevy_hanabi = "0.11.*"
bevy-steamworks = "0.11.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
